--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "mongoose": "^5.11.11",
         "mongoose-unique-validator": "^2.0.3",
         "node": "^15.4.0",
+        "node-cron": "^2.0.3",
         "underscore": "^1.12.0"
     }
 }
